--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
-langchain==0.2.0
-langchain-community==0.2.0
-pinecone-client==3.2.0
-sentence-transformers==2.7.0
-transformers==4.40.0
-torch==2.3.0
-streamlit==1.35.0
-pypdf==4.2.0
+langchain==0.3.0
+langchain-community==0.3.0
+langchain-pinecone==0.2.0
+pinecone-client==5.0.1
+sentence-transformers==3.1.1
+transformers==4.44.2
+torch==2.4.1
+streamlit==1.39.0
+pypdf==5.0.1
 langdetect==1.0.9
+python-dotenv==1.0.1
+pydantic==2.9.2
+sentencepiece==0.2.0
+langchain-huggingface==0.1.0
+fasttext-wheel==0.9.2
