--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ transformers==4.44.2
 torch==2.4.1
 streamlit==1.39.0
 pypdf==5.0.1
-langdetect==1.0.9
+fasttext-wheel==0.9.2
 python-dotenv==1.0.1
 pydantic==2.9.2
 sentencepiece==0.2.0
 langchain-huggingface==0.1.0
-fasttext-wheel==0.9.2
+scikit-learn==1.5.2
